Added beamer template and updated packages

--- a/article.tex
+++ b/article.tex
@@ -7,11 +7,16 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\usepackage{mathtools}
+\usepackage{tensor}
 \usepackage{siunitx}
-\usepackage[backend=biber,style=apa,sorting=nyvt]{biblatex}
+\usepackage{appendix}
+\usepackage[backend=biber,style=phys,sorting=nyvt]{biblatex}
 
 \addbibresource{bibliography.bib}
-\DeclareLanguageMapping{american}{american-apa}
+%\DeclareLanguageMapping{american}{american-apa}
 \renewcommand{\UrlFont}{\tt}
 
 %\DefineBibliographyStrings{american}{%
